# MCP-ROBOT

./: .gitignore  AUDIT.md  README.md  RUNBOOK.md  benchmark_results.json  pyproject.toml  requirements.txt
mcp_robot/: pipeline.py  server.py
mcp_robot/action_encoder/: universal_action_encoder.py  visio_tactile_action_encoder.py
mcp_robot/contracts/: schemas.py
mcp_robot/execution/: ros_edge_controller.py  ros_helpers.py  ros_interface.py
mcp_robot/planning/: long_horizon_planner.py  task_decomposer.py
mcp_robot/runtime/: determinism.py
mcp_robot/simulation/: kinematic_sim.py
mcp_robot/verification/: physics_engine.py  verification_engine.py
mrcp/: pipeline.py  server.py
mrcp/action_encoder/: universal_action_encoder.py
mrcp/execution/: ros_edge_controller.py
mrcp/learning/: learning_loop.py
mrcp/planning/: long_horizon_planner.py  task_decomposer.py
mrcp/verification/: verification_engine.py
scripts/: benchmark_runner.py  generate_benchmark_viz.py  generate_dashboard.py  generate_prompt_viz.py  local_agent.py  prompt_eval.py  qa_stabilization.py  simulate_client.py
tests/: test_determinism.py
viz_output/: dashboard.html
